initial data models and configuration

--- a/_config.production.yml
+++ b/_config.production.yml
@@ -1,1 +1,1 @@
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "https://ocupop.com" # the base hostname & protocol for your site
