--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "website-project-template",
-  "version": "0.2.0",
+  "name": "ocupop-website",
+  "version": "1.2.0",
   "description": "Project description...",
   "private": true,
   "repository": {
