Updated html5 and focus layout

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ collections:
     permalink: /work/:title/
   focuses:
     output: true
-    layout: project
+    layout: focus
     permalink: /focus/:title/
 
 # defaults:
