--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "bootstrap": "^4.1.3",
     "gsap": "^2.0.2",
     "jquery": "^3.2.1",
+    "mixitup": "^3.3.0",
     "popper.js": "^1.14.4",
     "webfontloader": "^1.6.28"
   }
