--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "yargs": "^11.1.0"
   },
   "dependencies": {
+    "barba.js": "^1.0.0",
     "bootstrap": "^4.1.3",
     "gsap": "^2.0.2",
     "jquery": "^3.2.1",
