--- a/scss-lint.yml
+++ b/scss-lint.yml
@@ -15,6 +15,8 @@ linters:
     enabled: false
   EmptyRule:
     enabled: false
+  FinalNewline:
+    enabled: false
   HexLength:
     style: 'long'
   HexValidation:
