--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "bootstrap": "^4.1.3",
     "gsap": "^2.0.2",
     "jquery": "^3.2.1",
+    "jquery-parallax.js": "^1.5.0",
     "js-cookie": "^2.2.0",
     "mixitup": "^3.3.0",
     "popper.js": "^1.14.4",
