--- a/scss-lint.yml
+++ b/scss-lint.yml
@@ -51,8 +51,9 @@ linters:
     allow_element_with_id: true
   SelectorDepth:
     enabled: true
-    max_depth: 5
+    max_depth: 7
   SelectorFormat:
+    enabled: false
     convention: 'hyphenated_lowercase'
   Shorthand:
     enabled: true
