remove amy image

--- a/src/_data/staff.yml
+++ b/src/_data/staff.yml
@@ -67,7 +67,7 @@
   spirit_animal: Owl
   what_you_want_to_be_when_you_grow_up: An urban sheep farmer
   catch_phrase: I'd rather be knitting.
-  image: /uploads/amy.jpg
+  image:
 - name: Blythe Jewell
   role:
   preferred_title: 
