Updated 2 files via CloudCannon

--- a/src/_data/staff.yml
+++ b/src/_data/staff.yml
@@ -70,14 +70,14 @@
   image:
 - name: Blythe Jewell
   role:
-  preferred_title: 
+  preferred_title:
   spirit_animal:
   what_you_want_to_be_when_you_grow_up:
   catch_phrase:
-  image: /uploads/blythe.jpg
+  image: /uploads/blythe-1.jpg
 - name: Claire Lafontaine
   role: Studio Manager
-  preferred_title: Naturalist, Explorer
+  preferred_title: 'Naturalist, Explorer'
   spirit_animal: Dolphin
   what_you_want_to_be_when_you_grow_up: A sheep farmer and herbalist
   catch_phrase: Look! A tiny flower!
