Updated 'src/_data/staff.yml' via CloudCannon

--- a/src/_data/staff.yml
+++ b/src/_data/staff.yml
@@ -69,7 +69,7 @@
   catch_phrase: I'd rather be knitting.
   image:
 - name: Blythe Jewell
-  role:
+  role: Content strategist
   preferred_title:
   spirit_animal:
   what_you_want_to_be_when_you_grow_up:
