--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Ocupop
 email: dev@ocupop.com
-description: ''
+description: 'A small super-powered creative agency with zero awards'
 url: "https://chartreuse-echidna.cloudvent.net/"
 permalink: pretty
 analytics_code:
