Updated 2 files via CloudCannon

--- a/src/_data/staff.yml
+++ b/src/_data/staff.yml
@@ -67,7 +67,7 @@
   spirit_animal: Owl
   what_you_want_to_be_when_you_grow_up: An urban sheep farmer
   catch_phrase: I'd rather be knitting.
-  image:
+  image: /uploads/ocupop-about-amy.jpg
 - name: Blythe Jewell
   role: Content strategist
   preferred_title:
