loading indicator, work page layout, staff details

--- a/src/_data/staff.yml
+++ b/src/_data/staff.yml
@@ -42,10 +42,10 @@
   image: /uploads/ocupop-about-abby.jpg
 - name: Chris Walker
   role: 'Art Director, Designer'
-  preferred_title:
-  spirit_animal:
-  what_you_want_to_be_when_you_grow_up:
-  catch_phrase:
+  preferred_title: Wire Manager
+  spirit_animal: Fox
+  what_you_want_to_be_when_you_grow_up: Quieter
+  catch_phrase: One more?
   image: /uploads/ocupop-about-chris.jpg
 - name: Jenny Vanderheiden
   role: 'Art Director, Designer'
