--- a/src/_data/staff.yml
+++ b/src/_data/staff.yml
@@ -32,7 +32,7 @@
   spirit_animal: Bear
   what_you_want_to_be_when_you_grow_up: Space Wizard
   catch_phrase: Deesh!
-  image: /uploads/jon.jpg
+  image: /uploads/jon-profile.jpg
 - name: Abby Lindstrom
   role: 'Art Director, Designer'
   preferred_title: Snack Sorceress
