Add Nick to Staff

--- a/src/_data/staff.yml
+++ b/src/_data/staff.yml
@@ -19,13 +19,13 @@
   what_you_want_to_be_when_you_grow_up: Beastie Boy
   catch_phrase:
   image: /uploads/ocupop-about-jeff.jpg
-- name: Jason Reimer
-  role: Director of Design
-  preferred_title: One helluva guy
+- name: Nick Krusick
+  role: Senior Art Director
+  preferred_title: Kickflip Subject-Matter-Expert
   spirit_animal: Blue Jay
-  what_you_want_to_be_when_you_grow_up: Cyclocross Champ
-  catch_phrase: No shortcuts
-  image: /uploads/ocupop-about-jason.jpg
+  what_you_want_to_be_when_you_grow_up: Craigslist PowerSeller
+  catch_phrase: Nah. Nahh.
+  image: /uploads/nick-ocupop-headshot.jpg
 - name: Jon Burr
   role: Developer
   preferred_title: Boardist
