--- a/src/_data/staff.yml
+++ b/src/_data/staff.yml
@@ -34,7 +34,7 @@
   catch_phrase: Deesh!
   image: /uploads/jon-profile.jpg
 - name: Abby Lindstrom
-  role: 'Art Director, Designer'
+  role: 'Senior Art Director'
   preferred_title: Snack Sorceress
   spirit_animal: Otter
   what_you_want_to_be_when_you_grow_up: Farmer or nail art influencer
@@ -51,7 +51,7 @@
   role: 'Art Director, Designer'
   preferred_title: Office Shaman
   spirit_animal: Hummingbird
-  what_you_want_to_be_when_you_grow_up: Traveling Artist or the fairy from Ferngully
+  what_you_want_to_be_when_you_grow_up: Traveling Artist
   catch_phrase: It's like magic!
   image: /uploads/ocupop-about-jenny.jpg
 - name: Nathaniel Fostan
