Update bios / typo on home page

--- a/src/_data/staff.yml
+++ b/src/_data/staff.yml
@@ -34,7 +34,7 @@
   catch_phrase: Deesh!
   image: /uploads/jon-profile.jpg
 - name: Abby Lindstrom
-  role: 'Senior Art Director'
+  role: 'Senior Art Director - Design'
   preferred_title: Snack Sorceress
   spirit_animal: Otter
   what_you_want_to_be_when_you_grow_up: Farmer or nail art influencer
