Update Blythe bio

--- a/src/_data/staff.yml
+++ b/src/_data/staff.yml
@@ -69,11 +69,11 @@
   catch_phrase: I'd rather be knitting.
   image: /uploads/ocupop-about-amy.jpg
 - name: Blythe Jewell
-  role: Content strategist
-  preferred_title:
+  role: Content Strategist
+  preferred_title: Oxford Comma Activist
   spirit_animal:
-  what_you_want_to_be_when_you_grow_up:
-  catch_phrase:
+  what_you_want_to_be_when_you_grow_up: Someone with really great hair
+  catch_phrase: It's such a fine line between stupid and clever.
   image: /uploads/blythe-3.jpg
 - name: Claire Lafontaine
   role: Studio Manager
