--- a/src/_data/staff.yml
+++ b/src/_data/staff.yml
@@ -6,7 +6,7 @@
   catch_phrase: Fuck No. Shit Yeah!
   image: /uploads/ocupop-about-michael.jpg
 - name: Tom Beck
-  role: Technical Director
+  role: Director of Operations
   preferred_title: Hey You!
   spirit_animal: Tiger
   what_you_want_to_be_when_you_grow_up: Older
@@ -34,7 +34,7 @@
   catch_phrase: Deesh!
   image: /uploads/jon-profile.jpg
 - name: Abby Lindstrom
-  role: 'Senior Art Director - Design'
+  role: Senior Art Director - Design
   preferred_title: Snack Sorceress
   spirit_animal: Otter
   what_you_want_to_be_when_you_grow_up: Farmer or nail art influencer
