Updated 'src/_data/staff.yml' via CloudCannon

--- a/src/_data/staff.yml
+++ b/src/_data/staff.yml
@@ -59,7 +59,7 @@
   preferred_title: Sport/Champ/Kiddo
   spirit_animal: Owl
   what_you_want_to_be_when_you_grow_up: Kanye West
-  catch_phrase: ':ocean::ocean::ocean:'
+  catch_phrase: "\U0001F30A\U0001F30A\U0001F30A"
   image: /uploads/ocupop-about-nate.jpg
 - name: Amy Liebrock
   role: Content Strategist
