Updated 'src/_data/staff.yml' via CloudCannon

--- a/src/_data/staff.yml
+++ b/src/_data/staff.yml
@@ -55,7 +55,7 @@
   catch_phrase: It's like magic!
   image: /uploads/ocupop-about-jenny.jpg
 - name: Nathaniel Fostan
-  role: Designer
+  role: Developer
   preferred_title: Sport/Champ/Kiddo
   spirit_animal: Owl
   what_you_want_to_be_when_you_grow_up: Kanye West
