--- a/src/_data/staff.yml
+++ b/src/_data/staff.yml
@@ -61,13 +61,13 @@
   what_you_want_to_be_when_you_grow_up: Kanye West
   catch_phrase: "\U0001F30A\U0001F30A\U0001F30A"
   image: /uploads/ocupop-about-nate.jpg
-- name: Amy Liebrock
-  role: Content Strategist
-  preferred_title: Word Wrangler
+- name: Alex Lahr
+  role: Lead Strategist & Writer
+  preferred_title: Colonel Mustard
   spirit_animal: Owl
-  what_you_want_to_be_when_you_grow_up: An urban sheep farmer
-  catch_phrase: I'd rather be knitting.
-  image: /uploads/ocupop-about-amy.jpg
+  what_you_want_to_be_when_you_grow_up: LEGO Minifigure
+  catch_phrase: Alrighty!
+  image: /uploads/ocupop-about-alex.jpg
 - name: Blythe Jewell
   role: Content Strategist
   preferred_title: Oxford Comma Activist
