Updated 2 files via CloudCannon

--- a/src/_data/staff.yml
+++ b/src/_data/staff.yml
@@ -82,3 +82,10 @@
   what_you_want_to_be_when_you_grow_up: A sheep farmer and herbalist
   catch_phrase: Look! A tiny flower!
   image: /uploads/Claire_Headshot_OcupopWeb.jpg
+- name: Ashley Tulpa
+  role: Designer
+  preferred_title: Vibe Curator
+  spirit_animal:
+  what_you_want_to_be_when_you_grow_up: Insect Taxidermist
+  catch_phrase: That's wild.
+  image: /uploads/ocupop-about-ashley.jpg
