Updated 2 files via CloudCannon

--- a/src/_data/staff.yml
+++ b/src/_data/staff.yml
@@ -89,3 +89,10 @@
   what_you_want_to_be_when_you_grow_up: Insect Taxidermist
   catch_phrase: That's wild.
   image: /uploads/ocupop-about-ashley.jpg
+- name: Shelly Robertson
+  role: Designer
+  preferred_title: Benevolent Mother of Cats
+  spirit_animal:
+  what_you_want_to_be_when_you_grow_up: Best dressed lady at the estate sale
+  catch_phrase: It's all about mental boundaries
+  image: /uploads/ocupop-about-shelly.jpg
