Updated 2 files via CloudCannon

--- a/src/_data/staff.yml
+++ b/src/_data/staff.yml
@@ -96,3 +96,10 @@
   what_you_want_to_be_when_you_grow_up: Best dressed lady at the estate sale
   catch_phrase: It's all about mental boundaries
   image: /uploads/ocupop-about-shelly.jpg
+- name: Cody Nicoll
+  role: Developer
+  preferred_title: Coder
+  spirit_animal:
+  what_you_want_to_be_when_you_grow_up: Botanist on Mars
+  catch_phrase: 'This is fine, everything is fine'
+  image: /uploads/ocupop-about-cody.jpg
