Updated 'src/_data/staff.yml' via CloudCannon

--- a/src/_data/staff.yml
+++ b/src/_data/staff.yml
@@ -33,7 +33,7 @@
   what_you_want_to_be_when_you_grow_up: Space Wizard
   catch_phrase: Deesh!
   image: /uploads/jon-profile.jpg
-- name: Abby Lindstrom
+- name: Abby Ruminski
   role: Senior Art Director - Design
   preferred_title: Snack Sorceress
   spirit_animal: Otter
