Updated 2 files via CloudCannon

--- a/src/_data/staff.yml
+++ b/src/_data/staff.yml
@@ -110,3 +110,10 @@
   what_you_want_to_be_when_you_grow_up: Long-haul truck driver
   catch_phrase: Cool. Cool cool cool cool cool.
   image: /uploads/img-6610.jpeg
+- name: Morgen Harvey
+  role: Strategist & Project Manager
+  preferred_title: Lead Amateur Whittler
+  spirit_animal:
+  what_you_want_to_be_when_you_grow_up: Grow up?? Gross.
+  catch_phrase: 'OOO: on a bike ride'
+  image: /uploads/morgen.jpg
