--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ description: 'A small super-powered creative agency with zero awards'
 url: "https://ocupop.com/"
 permalink: pretty
 analytics_code: UA-20780270-1
+analytics_ga4_code: G-TBTWG6ZXWZ
 
 placeholders:
   hero: /assets/img/1800x800.png
