Updated 'src/_data/staff.yml' via CloudCannon

--- a/src/_data/staff.yml
+++ b/src/_data/staff.yml
@@ -6,7 +6,7 @@
   catch_phrase: Fuck No. Shit Yeah!
   image: /uploads/ocupop-about-michael.jpg
 - name: Tom Beck
-  role: Director of Operations
+  role: Technical Director
   preferred_title: Hey You!
   spirit_animal: Tiger
   what_you_want_to_be_when_you_grow_up: Older
