Updated 2 files via CloudCannon.

--- a/src/_data/staff.yml
+++ b/src/_data/staff.yml
@@ -96,3 +96,10 @@
   what_you_want_to_be_when_you_grow_up: Risograph Print Specialist
   catch_phrase: Alright, later guys.
   image: /uploads/adam.jpg
+- name: Nicki Gamroth
+  role: Designer
+  preferred_title: Renaissance Woman
+  spirit_animal:
+  what_you_want_to_be_when_you_grow_up: Silly
+  catch_phrase: You good bro?
+  image: /uploads/nicki-gamroth-headshot-1440x1080.jpg
