Updated 2 files via CloudCannon.

--- a/src/_data/staff.yml
+++ b/src/_data/staff.yml
@@ -96,6 +96,13 @@
   what_you_want_to_be_when_you_grow_up: Risograph Print Specialist
   catch_phrase: Alright, later guys.
   image: /uploads/adam.jpg
+- name: Morgan Schumacher
+  role: Project Manager
+  preferred_title: Swiftie
+  spirit_animal:
+  what_you_want_to_be_when_you_grow_up: Reality TV contestant turned Reality TV Host
+  catch_phrase: woooooooooow
+  image: /uploads/16709464-2361-4181-85b8-3c12d5ac3aca-1-105-c.jpeg
 - name: Nicki Gamroth
   role: Designer
   preferred_title: Renaissance Woman
