Updated 1 file via CloudCannon.

--- a/src/_data/staff.yml
+++ b/src/_data/staff.yml
@@ -110,3 +110,10 @@
   what_you_want_to_be_when_you_grow_up: Silly
   catch_phrase: You good bro?
   image: /uploads/nicki-gamroth-headshot-1440x1080.jpg
+- name: Heather Kutzke
+  role: Project Manager
+  preferred_title: Creative Wrangler
+  spirit_animal:
+  what_you_want_to_be_when_you_grow_up: Professional Thrift Shopper
+  catch_phrase: Dude! (or Oh, Word?) - i cannot decide lol:)
+  image: ''
