Updated 2 files via CloudCannon.

--- a/src/_data/staff.yml
+++ b/src/_data/staff.yml
@@ -39,7 +39,7 @@
   spirit_animal: Otter
   what_you_want_to_be_when_you_grow_up: Farmer or nail art influencer
   catch_phrase: Byeeeee
-  image: /uploads/ocupop-about-abby.jpg
+  image: /uploads/img-1617.jpeg
 - name: Chris Walker
   role: Art Director, Designer
   preferred_title: Wire Manager
