--- a/src/_data/staff.yml
+++ b/src/_data/staff.yml
@@ -116,4 +116,4 @@
   spirit_animal:
   what_you_want_to_be_when_you_grow_up: Professional Thrift Shopper
   catch_phrase: Dude! (or Oh, Word?) - i cannot decide lol:)
-  image: ''
+  image: /uploads/headshot-2.jpg
