Updated 3 files via CloudCannon.

--- a/src/_data/staff.yml
+++ b/src/_data/staff.yml
@@ -117,3 +117,10 @@
   what_you_want_to_be_when_you_grow_up: Professional Thrift Shopper
   catch_phrase: Dude! (or Oh, Word?) - i cannot decide lol:)
   image: /uploads/headshot-2.jpg
+- name: Hannah Gilbertson
+  role: Project Coordinator
+  preferred_title: Wyatt and Robby's Momma
+  spirit_animal:
+  what_you_want_to_be_when_you_grow_up: Professional Homesteader
+  catch_phrase: Holy balls
+  image: /uploads/acs-0414.jpg
