Updated 2 files via CloudCannon.

--- a/src/_data/staff.yml
+++ b/src/_data/staff.yml
@@ -124,3 +124,10 @@
   what_you_want_to_be_when_you_grow_up: Professional Homesteader
   catch_phrase: Holy balls
   image: /uploads/acs-0414.jpg
+- name: Kaylee Bird
+  role: Junior Designer
+  preferred_title: Puter Drawer
+  spirit_animal:
+  what_you_want_to_be_when_you_grow_up: Big and strong
+  catch_phrase: I don't fib or play
+  image: /uploads/kaylee-headshot.jpeg
