Updated 2 files via CloudCannon.

--- a/src/_data/staff.yml
+++ b/src/_data/staff.yml
@@ -28,11 +28,11 @@
   image: /uploads/nick-ocupop-headshot.jpg
 - name: Jon Burr
   role: Developer
-  preferred_title: Boardist
+  preferred_title: Boardmaster
   spirit_animal: Bear
   what_you_want_to_be_when_you_grow_up: Space Wizard
   catch_phrase: Deesh!
-  image: /uploads/jon-profile.jpg
+  image: /uploads/jon.jpg
 - name: Abby Ruminski
   role: Associate Creative Director
   preferred_title: Snack Sorceress
