--- a/src/_data/staff.yml
+++ b/src/_data/staff.yml
@@ -1,11 +1,11 @@
 - name: Michael Nieling
-  email: email@mail.com
+  email:
   role: Founder, Creative Director
   preferred_title: Chief Mathlete
   what_you_want_to_be_when_you_grow_up: Soccer coach and artisanal dog walker
   catch_phrase: Fuck No. Shit Yeah!
   image: /uploads/ocupop-about-michael.jpg
-  bio_html: <p>Sample bio html ...</p>
+  bio_html: ''
 - name: Tom Beck
   email:
   role: Technical Director
